# personal-rag

./: .gitignore
backend/: .gitignore  pom.xml
backend/src/main/java/rag/backend/: BackendApplication.java
backend/src/main/java/rag/backend/controller/: AuthController.java  ChatController.java
backend/src/main/java/rag/backend/dto/: ApiResponse.java  Dto.java
backend/src/main/java/rag/backend/entity/: BlacklistedToken.java  ChatMessage.java  ChatSession.java  Chunk.java  Document.java  RefreshToken.java  User.java
backend/src/main/java/rag/backend/exception/: CustomException.java  GlobalExceptionHandler.java
backend/src/main/resources/: application-dev.properties
backend/src/test/java/rag/backend/: BackendApplicationTests.java
fastapi-service/: .gitignore  config.py  main.py  pyproject.toml
fastapi-service/models/: schemas.py
fastapi-service/routes/: delete_document.py  embed.py  query.py
fastapi-service/services/: embedding_service.py  langchain_service.py  retrieval_service.py
fastapi-service/store/: faiss_store.py  metadata_store.py
fastapi-service/utils/: file_parser.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: api.js  auth.js  chat.js  client.js  documents.js
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx  ToastContext.jsx
frontend/src/pages/: ChatPage.jsx  DocumentPage.jsx  LoginPage.jsx  RegisterPage.jsx
spring-service/: pom.xml
spring-service/src/main/resources/: application-dev.properties
(+52 files in other folders)
